<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_farm"
        style="@style/Text.Title"
        android:layout_marginBottom="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:id="@+id/card_farm_care" style="@style/MenuCard"
            android:layout_marginEnd="@dimen/card_spacing"
            android:text="@string/farm_care" />
        <TextView android:id="@+id/card_farm_explore" style="@style/MenuCard"
            android:layout_marginEnd="@dimen/card_spacing"
            android:text="@string/farm_explore" />
        <TextView android:id="@+id/card_wardrobe" style="@style/MenuCard"
            android:layout_marginEnd="@dimen/card_spacing"
            android:text="@string/farm_wardrobe" />
        <TextView android:id="@+id/card_character" style="@style/MenuCard"
            android:text="@string/character_select" />
    </LinearLayout>
</LinearLayout>
