<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/bg_main"
    android:keepScreenOn="true">

    <TextView style="@style/Text.Headline"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/character_select" android:layout_marginBottom="32dp" />

    <LinearLayout
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout android:id="@+id/card_a" style="@style/MenuCard"
            android:orientation="vertical"
            android:layout_marginEnd="32dp">
            <ImageView android:layout_width="120dp" android:layout_height="120dp"
                android:layout_gravity="center" android:src="@drawable/ic_chick" />
            <TextView style="@style/Text.Title"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="center" android:text="@string/character_a" />
        </LinearLayout>

        <LinearLayout android:id="@+id/card_b" style="@style/MenuCard"
            android:orientation="vertical">
            <ImageView android:layout_width="120dp" android:layout_height="120dp"
                android:layout_gravity="center" android:src="@drawable/ic_chick" />
            <TextView style="@style/Text.Title"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="center" android:text="@string/character_b" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
